# database

./: README.md  docker-compose-cluster.yml  docker-compose-kibana.yml  docker-compose-single.yml
elastic-search/: README.md
elastic-search/cluster-setup/: docker-compose-cluster.yml  docker-compose-kibana.yml  docker-compose-single.yml
mongo/python/basic/: pyproject.toml
mongo/python/oltp-service/: .env  docker-compose.yml  main.py  pyproject.toml
mongo/python/oltp-service/src/: api.py  config.py  db.py  models.py  server.py
mongo/python/oltp-service/src/items/: models.py  service.py  views.py
mongo/python/oltp-service/tests/: conftest.py  test_items.py
mysql/python/fastapi-boilerplate/: README.md  docker-compose.yml  main.py  pyproject.toml
mysql/python/fastapi-boilerplate/docker/api/: Dockerfile  start.sh
mysql/python/fastapi-boilerplate/docker/mysql/: Dockerfile
mysql/python/fastapi-boilerplate/docker/mysql/mysql-init-files/: init.sql
mysql/python/fastapi-boilerplate/src/: config.py  server.py
mysql/python/fastapi-boilerplate/src/core/: database.py
