[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["ithingv34 <ithingv34@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.85.0"
uvicorn = "0.18.3"
click = "^8.1.7"
sqlalchemy = "1.4.41"
aiomysql = "^0.2.0"
alembic = "^1.11.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
